--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     margin-right:auto;
     height:fit-content;
     padding-bottom:1%;
-    width:16vw;
+    width: clamp(12vw, 16vw, 12vw);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
